--- a/storefront/build.gradle
+++ b/storefront/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     }
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile("org.springframework.boot:spring-boot-starter-security")
+    compile('javax.xml.bind:jaxb-api:2.3.0')
+    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 }
 
 test {
