--- a/frontend-client/vue-src/package.json
+++ b/frontend-client/vue-src/package.json
@@ -8,9 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap3": "^3.3.5",
     "core-js": "^3.6.4",
-    "jquery": "^3.4.1",
+    "node": "^13.12.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
