--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.prefix:  /WEB-INF/view/
 spring.mvc.view.suffix:  .jsp
 
 #db config
-spring.datasource.url= jdbc:mysql://localhost:3306/userdb
+spring.datasource.url= jdbc:mysql://localhost:3306/userdb?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
