--- a/frontend-client/vue-src/package.json
+++ b/frontend-client/vue-src/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap3": "^3.3.5",
     "core-js": "^3.6.4",
     "jquery": "^3.4.1",
