--- a/ApiGateway/docker-compose.yml
+++ b/ApiGateway/docker-compose.yml
@@ -3,11 +3,10 @@ version: '3'
 services:
   api:
     restart: always
+    working_dir: /storefront
     build:
       context: ./storefront
-      args:
-        - JAR_FILE=build/libs/storefront-0.0.1-SNAPSHOT.jar
-    working_dir: /storefront
+    container_name: api-layer
     volumes:
       - ./storefront:/storefront
       - ~/.m2:/root/.m2
