--- a/userService/pom.xml
+++ b/userService/pom.xml
@@ -10,10 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.mpp.project</groupId>
-	<artifactId>mppprojectdatabase</artifactId>
+	<artifactId>userService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mppprojectdatabase</name>
-	<description>Demo project for Spring Boot</description>
+	<name>userService</name>
+	<description>User service for all user related data</description>
 
 	<properties>
 		<java.version>1.8</java.version>
