--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 services:
   hk-mysql:
-   container_name: hk-mysql
+   container_name: mysql-server
    image: mysql/mysql-server:5.7
    environment:
-    MYSQL_DATABASE: test
-    MYSQL_ROOT_PASSWORD: hellokoding
+    MYSQL_DATABASE: food
+    MYSQL_ROOT_PASSWORD: root
     MYSQL_ROOT_HOST: '%'
    ports:
     - "3306:3306"
