--- a/backend/food-service/Dockerfile
+++ b/backend/food-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM gradle:jdk10 as builder
+FROM gradle:latest as builder
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build
