--- a/backend/food-service/src/main/resources/application.properties
+++ b/backend/food-service/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://mysql57:3306/hello_java
 spring.datasource.username=demo_java
 spring.datasource.password=1234
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
