--- a/backend/food-service/src/main/resources/application.properties
+++ b/backend/food-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://mysql57:3306/hello_java
+spring.datasource.url=jdbc:mysql://localhost:3306/hello_java
 spring.datasource.username=demo_java
 spring.datasource.password=1234
 
