--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     MYSQL_PASSWORD: 1234
     MYSQL_DATABASE: hello_java
    volumes:
-    - food-service/db/docker-entrypoint-initdb.d
+    - ./food-service/db/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
    ports:
-    - "3306:3306"
+    - "3308:3308"
    restart: always
 
 #  food-service:
