--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,16 +1,4 @@
 
 server.port=8083
 
-spring.mvc.view.prefix:  /WEB-INF/view/
-spring.mvc.view.suffix:  .jsp
-
-#db config
-spring.datasource.url= jdbc:mysql://localhost:3306/userdb?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-
-#hibernate config
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/userdb?retryWrites=true&w=majority
