--- a/backend/food-service/Dockerfile
+++ b/backend/food-service/Dockerfile
@@ -1,8 +1,19 @@
-FROM gradle:latest as builder
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build
-
+# Moved here to test one java script.
+# That connects to mysql database on another contianer
 FROM openjdk:10-jre-slim
-COPY --from=builder /home/gradle/src/build/libs/food-service-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+
+FROM openjdk:8 AS TEMP_BUILD_IMAGE
+ENV APP_HOME=/home/gradle/
+WORKDIR $APP_HOME
+COPY build.gradle settings.gradle gradlew $APP_HOME
+COPY gradle $APP_HOME/gradle
+RUN ./gradlew build || return 0
+COPY . .
+#RUN ./gradlew build
+#
+#
+#ENV ARTIFACT_NAME=food-service-0.0.1-SNAPSHOT.jar
+#ENV APP_HOME=/home/gradle/
+#WORKDIR $APP_HOME
+#COPY --from=TEMP_BUILD_IMAGE $APP_HOME/build/libs/$ARTIFACT_NAME .
+#CMD ["java","-jar",$ARTIFACT_NAME]
