--- a/backend/food-service/src/main/resources/application.properties
+++ b/backend/food-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3318/hello_java
+spring.datasource.url=jdbc:mysql://mysql57:3318/hello_java
 spring.datasource.username=demo_java
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
