--- a/frontend-client/Dockerfile
+++ b/frontend-client/Dockerfile
@@ -10,7 +10,7 @@ COPY package*.json ./
 RUN npm install
 
 # copy project files and folders to the current working directory (i.e. 'app' folder)
-COPY . .
+COPY vue-src .
 
 # build app for production with minification
 RUN npm run build
