--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,12 @@ services:
       - ~/.m2:/root/.m2
     ports:
       - "8081:8081"
+  userservice:
+    working_dir: /userService
+    build:
+      context: ./userService
+    container_name: userService
+    volumes: 
+      - ./userService:/userservice
+    ports:
+      - "8083:8083"
