--- a/storefront/Dockerfile
+++ b/storefront/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /home/gradle/src
 RUN gradle build
 
 FROM openjdk:10-jre-slim
-COPY --from=builder /home/gradle/src/build/libs/storefront-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+COPY --from=builder /home/gradle/src/build/libs/storefront-0.0.1-SNAPSHOT.jar storefront.jar
+ENTRYPOINT ["java","-jar","/storefront.jar"]
