changed user to service restart always while docker-compose up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     ports:
       - "8081:8081"
   userservice:
+    restart: always
     working_dir: /userService
     build:
       context: ./userService
