--- a/frontend-client/Dockerfile
+++ b/frontend-client/Dockerfile
@@ -4,7 +4,7 @@ FROM node:lts-alpine
 RUN npm install -g http-server
 
 # copy both 'package.json' and 'package-lock.json' (if available)
-COPY package*.json ./
+COPY vue-src/package*.json ./
 
 # install project dependencies
 RUN npm install
