--- a/frontend-client/vue-src/package.json
+++ b/frontend-client/vue-src/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --port 8085",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --port 8085",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
