database moved to local

--- a/backend/food-service/src/main/resources/application.properties
+++ b/backend/food-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8084
-spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/fooddb?retryWrites=true&w=majority
+#spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/fooddb?retryWrites=true&w=majority
 
 #spring.datasource.url=jdbc:mysql://127.0.0.1:3318/hello_java
 #spring.datasource.username=demo_java
