--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,24 @@ services:
     ports:
       - "8083:8083"
 
+  bk-order:
+    image: bk-order
+    restart: always
+    working_dir: /orderProcessingService
+    build:
+      context: ./orderProcessingService
+    volumes:
+      - ./orderProcessingService:/orderProcessingService
+    ports:
+      - "8082:8082"
+
+  mongo:
+    image: mongo:3.4.1
+    ports:
+      - '27017:27017'
+    volumes:
+    - mongo:/data/db
+    
 #  bk-order:
 #    image: bk-order
 #    restart: always
