--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
       - ~/.m2:/root/.m2
     ports:
       - "8081:8081"
+    depends_on: 
+      - mongo
 
   bk-food:
     image: bk-food
@@ -33,7 +35,9 @@ services:
     expose:
       - "8080"
     ports:
-      - "8090:8080"
+      - "8090:8080"  
+    depends_on: 
+      - mongo
 
   bk-user:
     image: bk-user
@@ -46,6 +50,8 @@ services:
       - ./userService:/userservice
     ports:
       - "8083:8083"
+    depends_on: 
+      - mongo
 
   bk-order:
     image: bk-order
@@ -57,6 +63,8 @@ services:
       - ./orderProcessingService:/orderProcessingService
     ports:
       - "8082:8082"
+    depends_on: 
+      - mongo
 
   mongo:
     image: mongo:3.4.1
