--- a/userService/src/main/resources/application.properties
+++ b/userService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 
 server.port=8083
 
-#spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/userdb?retryWrites=true&w=majority
+spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/userdb?retryWrites=true&w=majority
