--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     container_name: food-c
     ports:
       - "8084:8084"
+    depends_on: 
+      - mongo
 
   bk-user:
     image: bk-user
@@ -44,6 +46,8 @@ services:
       - ./userService:/userservice
     ports:
       - "8083:8083"
+    depends_on: 
+      - mongo
   
 
   bk-order:
@@ -56,3 +60,10 @@ services:
       - ./orderProcessingService:/orderProcessingService
     ports:
       - "8082:8082"
+    depends_on: 
+      - mongo
+  
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
