--- a/orderProcessingService/src/main/resources/application.properties
+++ b/orderProcessingService/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port = 8082
 
-#spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/orderdb?retryWrites=true&w=majority
+spring.data.mongodb.uri= mongodb+srv://anup:anup@cluster0-xcmxa.azure.mongodb.net/orderdb?retryWrites=true&w=majority
