enable redis cache

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,3 +67,8 @@ services:
     image: mongo
     ports:
       - "27017:27017"
+
+  redis-service:
+    image: redis
+    ports:
+      - "6379:6379"
