--- a/storefront/build.gradle
+++ b/storefront/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security")
     compile('javax.xml.bind:jaxb-api:2.3.0')
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    implementation 'junit:junit:4.12'
 }
 
 test {
